<resources>
    <string name="app_name">Homework1</string>
    <string name="val1">Value 1:</string>
    <string name="val2">Value 2:</string>
    <string name="hint1">Enter Value 1</string>
    <string name="hint2">Enter Value 2</string>
    <string name="operator">Operator</string>
    <string name="operatorPrompt">Choose an Operator</string>
    <string name="buttonStr">Calculate</string>
    <string-array name="operatorArray">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>

</resources>
