<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/hint1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_marginBottom="-60dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/hint2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/val1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginBottom="-60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/val2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginBottom="-60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/operator" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText2"
        android:layout_marginBottom="-60dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignLeft="@id/editText"
        android:layout_marginTop="60dp"
        android:entries="@array/operatorArray"
        android:prompt="@string/operatorPrompt" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="60dp"
        android:text="@string/buttonStr"
        android:onClick="Calculate"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button18"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/button18"
        android:layout_toRightOf="@+id/button18"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>